# openvpn3-gui

./: Cargo.toml  Readme.md
.github/workflows/: build-and-release.yml
src/: app.rs  config.rs  main.rs  openvpn.rs
