[package]
name = "openvpn3-gui"
version = "1.0.0"
edition = "2021"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"
rfd = "0.15.3"
anyhow = "1.0"
env_logger = "0.11.8"
egui_extras = "0.31.1"
chrono = "0.4.41"
